[package]
name = "MemoryGame"
version = "0.1.0"
description = "FrontendMentor | MemoryGame challenge"
authors = ["Jessai <maya.jessai+@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3  # 3 => fast, s/z => small

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]  # O4 => fast, Oz/Os => small

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
console_error_panic_hook = "0.1.7"
dominator = "0.5.31"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
futures-signals = "0.3.31"
once_cell = "1.16.0"
log = "0.4.17"
serde = {version = "1.0.147", features = ["derive"] }
wasm-bindgen-futures = "0.4.33"
serde_derive = "1.0.147"
futures = "0.3.25"

[dependencies.web-sys]
version = "0.3.60"
features = [
	"Window",
	"Document",
	"HtmlHeadElement",
	"Text",
	"Element",
    	"console",
	"Url",
	"Headers",
	"Request",
	"RequestInit",
	"RequestMode",
	"Response",
]
